fix. module 생성 후 그래프, 프로젝트 실행

--- a/Sample/Makefile
+++ b/Sample/Makefile
@@ -39,3 +39,11 @@ module:
 	echo "\n"; \
 	echo "🔨 모듈 생성중입니다"; \
 	tuist scaffold "$$folderName" --name "$$name" --path "$$destination"
+	echo ""; \
+	echo "📊 의존성 그래프 생성 중..."; \
+	tuist graph; \
+	\
+	echo ""; \
+	echo "🔄 프로젝트 실행 중..."; \
+	tuist generate; \
+	\
